Table USERS {
  id int [pk, increment] // auto-increment
  role_id int [not null, ref: > ROLES.id]
  username nvarchar(255)
  email varchar(50) [unique]
  password varchar(100)
  avatar varchar(255)
  created_at datetime [default: `getdate()`]
  updated_at datetime [default: `getdate()`]
  is_active bit [default: 1]
}

Table CONFIGS {
  id int [pk, increment]
  user_id int [not null, ref: - USERS.id]
  config_file varchar(255)
}

Table FAVORITES {
  id int [pk, increment]
  user_id int [not null, ref: > USERS.id]
  question_id int [not null, ref: - QUESTIONS.id]
  note nvarchar(255)
}

Table ROLES {
  id int [pk, increment]
  name nvarchar(255)
}

Table TESTS {
  id int [pk, increment]
  title varchar(255)
  score int
  slug varchar(255)
  duration int
  created_at datetime [default: `getdate()`]
  updated_at datetime [default: `getdate()`]
  is_deleted bit [default: 0]
}

Table ATTEMPTS {
  id int [pk, increment]
  user_id int [not null, ref: > USERS.id]
  test_id int [not null, ref: > TESTS.id]
  status_id int [not null, ref: > ATTEMPT_STATUS.id]
  score int
  created_at datetime [default: `getdate()`]
  updated_at datetime [default: `getdate()`]
  is_deleted bit [default: 0]
}

Table ATTEMPT_CHOICES {
  id int [pk, increment]
  attempt_id int [not null, ref: > ATTEMPTS.id]
  choice_id int [not null, ref: > CHOICES.id]
}

Table ATTEMPT_STATUS {
  id int [pk, increment]
  name varchar(255)
}

Table QUESTIONS {
  id int [pk, increment]
  test_id int [not null, ref: > TESTS.id]
  content varchar(255)
}

Table CHOICES {
  id int [pk, increment]
  question_id int [not null, ref: > QUESTIONS.id]
  content nvarchar(255)
  is_correct bit
}

Table FEEDBACKS {
  id int [pk, increment]
  user_id int [not null, ref: > USERS.id]
  question_id int [not null, ref: - QUESTIONS.id]
  content nvarchar(255)
  created_at datetime [default: `getdate()`]
  updated_at datetime [default: `getdate()`]
  is_deleted bit [default: 0]
}